# cs1302-dry

./: pyproject.toml
.github/workflows/: deploy.yaml
extensions/: sphinx_cs1302_utils.py
extensions/cs1302/: bootstrap_icons.py  cdn.py  dictutils.py  pyproject.py
source/: conf.py  index.rst
