[tool.poetry]
name = "cs1302-dry"
version = "0.1.0"
description = "DRY examples"
authors = ["Michael E. Cotterell <mepcott@uga.edu>"]
license = "CC-BY-NC-SA-4.0"
readme = "README.md"
packages = []
classifiers = ["Private :: Do not Upload"]

[tool.poetry.dependencies]
python = "^3.11"
Sphinx = "^6.1"
furo = "^2022.12.7"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.0.4"
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
