[tool.poetry]
name = "cs1302-dry"
version = "1.0.0a0"
description = "Don't Repeat Yourself in CSCI 1302"
authors = ["Michael E. Cotterell <mepcott@uga.edu>"]
license = "CC-BY-NC-SA-4.0"
readme = "README.md"
packages = []
classifiers = ["Private :: Do not Upload"]

[tool.poetry.dependencies]
python = "^3.11"
Sphinx = "^6.1"
furo = "^2022.12.7"
docutils = "^0.19"
requests = "^2.28.2"
requests-cache = "^0.9.8"
setuptools = "^67.2.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.0.4"
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
